@@ -1,3 +1,7 @@
+2005-10-29  Erik Hjortsberg  <erik@katastrof.nu>
+
+	* src/components/ogre/widgets/Widget.*, src/components/ogre/widgets/JesusEdit.cpp, src/components/ogre/GUIManager.* : moved the layout path method to GUIManager	
+
 2005-10-28  Erik Hjortsberg  <erik@katastrof.nu>
 
 	* src/framework/binreloc.c: include config.h
